# oarc-osyllabi

./: LICENSE  README.md  pyproject.toml
.github/security/: results.sarif
.github/workflows/: ethicalcheck.yml
docs/: curriculum.md  curriculum_generation_workflow.md  curriculum_workflow.md  database.md  decorators.md  generator_and_resource_modules.md  generator_package.md  implementation_plan.md  osyllabi_api.md  project_testing.md  rag_system.md  vector_operations.md
docs/syllabi/: Building Your First Spikey Neural Network_1.md  Building Your First Spikey Neural Network_2.md  Building Your First Spikey Neural Network_3.md  Building Your First Spikey Neural Network_4.md  Building Your First Spikey Neural Network_5.md
osyllabi/: __init__.py  config.py  curriculum.py  main.py
osyllabi/ai/: __init__.py  client.py  prompts.py
osyllabi/ai/agents/: __init__.py  agent.py
osyllabi/core/: curriculum.py
osyllabi/generator/: __init__.py  resources.py  workflow.py
osyllabi/generator/resource/: __init__.py  code.py  collector.py  data.py  extractor.py  file.py  manager.py  web.py
osyllabi/rag/: __init__.py  agent.py  cache.py  chunking.py  context.py  database.py  embedding.py  engine.py  llama.py  monitor.py  query.py  rag_agent.py
osyllabi/tests/: conftest.py  ollama_test.py
osyllabi/tests/ai/: client_test.py  model_availability_test.py  prompts_test.py
osyllabi/tests/ai/agents/: agent_test.py
osyllabi/tests/core/: curriculum_test.py
osyllabi/tests/generator/: resource_test.py  workflow_test.py
osyllabi/tests/generator/resource/: code_test.py  collector_test.py  data_test.py  extractor_test.py  file_test.py  manager_test.py  web_test.py
osyllabi/tests/rag/: cache_test.py  chunking_test.py  context_test.py  database_test.py  embedding_test.py  engine_test.py  llama_test.py  monitor_test.py  query_test.py  rag_agent_test.py
osyllabi/tests/utils/decorators/: factory_test.py  singleton_test.py
osyllabi/tests/utils/vector/: operations_test.py
osyllabi/utils/: __init__.py  const.py  deps.py  log.py  paths.py  utils.py
osyllabi/utils/cli/: __init__.py  clean.py  cmd.py  cmd_desc.py  cmd_descriptions.py  cmd_types.py  help.py  parser.py  router.py
osyllabi/utils/cli/commands/: __init__.py  clean_cmd.py  create_cmd.py  help_cmd.py
osyllabi/utils/config/: config.py
osyllabi/utils/decorators/: __init__.py  factory.py  retry.py  singleton.py
osyllabi/utils/vector/: __init__.py  operations.py
output/: Building Your First Spikey Neural Network.md  Building Your First Spikey Neural Network_2.md  Building Your First Spikey Neural Network_5.md  ML Fundamentals.json  ML Fundamentals.md  ML Fundamentals_1.json  ML Fundamentals_1.md  ML Fundamentals_2.json  ML Fundamentals_3.json  help Curriculum.md  help Curriculum_1.md
