[build-system]
requires = ["setuptools>=77.0.3", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osyllabi"
version = "0.1.0"
description = "A Python-powered curriculum designer leveraging AI, web crawling, and data integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache 2.0"}
authors = [
    {name = "K. Rawson", email = "rawsonkara@gmail.com"}
]
maintainers = [
    {name = "K. Rawson", email = "rawsonkara@gmail.com"}
]
keywords = ["curriculum-designer", "education", "AI", "web-crawling", "data-integration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# All runtime dependencies consolidated into a single section
dependencies = [
    # Core dependencies
    "PyQt6>=6.5.0",
    "requests>=2.28.0",  # Required for web requests and API calls
    "ollama>=0.4.7",     # Required - Ollama API client library
    "asyncio>=3.4.3",    # Required for asynchronous operations
    "numpy>=2.2.4",      # Required for vector operations
    "pandas>=2.2.3",      # Required for data manipulation and analysis
    
    # Web and document processing
    "beautifulsoup4>=4.11.0",  # Required for HTML parsing and extraction
    "markdown>=3.5.0",         # Required for markdown processing
    "pymupdf>=1.23.0",         # Required for PDF processing
    "python-docx>=1.0.0",      # Required for DOCX processing
    
    # Machine learning dependencies
    "scikit-learn>=1.4.0",     # Required for vector operations and ML utilities
    "faiss-cpu>=1.7.0",        # Required for vector search (auto-upgrades to GPU version if available)
    
    # RAG dependencies
    "langchain>=0.1.0",        # Required for advanced text chunking and RAG pipelines
    "tiktoken>=0.5.2",         # Required for accurate token counting
]

[project.optional-dependencies]
# Only development tools remain in the optional dependencies
dev = [
    "pytest>=7.2.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/p3nGu1nZz/osyllabi"
"Bug Tracker" = "https://github.com/p3nGu1nZz/osyllabi/issues"
"Repository" = "https://github.com/p3nGu1nZz/osyllabi.git"

[project.scripts]
osyllabi = "osyllabi.main:main"

[tool.setuptools]
packages = ["osyllabi"]
include-package-data = true
zip-safe = false