[build-system]
requires = ["setuptools>=77.0.3", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osyllabi"
version = "0.1.0"
description = "A state-of-the-art curriculum designer leveraging AI, web crawling, and data integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache 2.0"}
authors = [
    {name = "K. Rawson", email = "rawsonkara@gmail.com"}
]
maintainers = [
    {name = "K. Rawson", email = "rawsonkara@gmail.com"}
]
keywords = ["curriculum-designer", "education", "AI", "web-crawling", "data-integration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# All runtime dependencies consolidated into a single section
dependencies = [
    # Core dependencies
    "PyQt6>=6.5.0",
    "requests>=2.28.0",        # web requests and API calls
    "ollama>=0.4.7",           # Ollama API client library
    "asyncio>=3.4.3",          # asynchronous operations
    "numpy>=2.2.4",            # vector operations
    "pandas>=2.2.3",           # data manipulation and analysis
    "tenacity>=9.1.2",         # retrying operations with exponential backoff
    "aiohttp>=3.11.16",        # asynchronous HTTP client for web scraping
    
    # Web and document
    "beautifulsoup4>=4.11.0",  # HTML parsing and extraction
    "markdown>=3.5.0",         # markdown processing
    "pymupdf>=1.23.0",         # PDF processing
    "python-docx>=1.0.0",      # DOCX processing
    
    # Machine learning 
    "scikit-learn>=1.4.0",     # vector operations and ML utilities
    "faiss-cpu>=1.7.0",        # vector search (auto-upgrades to GPU version if available)
    
    # RAG and LLMs
    "llama-index>=0.10.0",     # RAG framework for LLMs
    "llama-index-experimental>=0.1.0",  # Experimental features like PandasQueryEngine
    "ollama>=0.1.20",          # Ollama API client library for LLMs
    "tqdm>=4.65.0",            # progress bar for long-running tasks

    "langchain>=0.1.0",        # advanced text chunking and RAG pipelines
    "langchain-community>=0.3.21", # community-contributed modules for LangChain
    "tiktoken>=0.5.2",         # accurate token counting
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mock>=5.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/p3nGu1nZz/osyllabi"
"Bug Tracker" = "https://github.com/p3nGu1nZz/osyllabi/issues"
"Repository" = "https://github.com/p3nGu1nZz/osyllabi.git"

[project.scripts]
osyllabi = "osyllabi.main:main"

[tool.setuptools]
packages = ["osyllabi"]
include-package-data = true
zip-safe = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
source = ["osyllabi"]
omit = [
    "*/tests/*",
    "setup.py",
]