[build-system]
requires = ["setuptools>=77.0.3", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osyllabi"
version = "0.1.0"
description = "A state-of-the-art curriculum designer leveraging AI, web crawling, and data integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache 2.0"}
authors = [
    {name = "K. Rawson", email = "rawsonkara@gmail.com"}
]
maintainers = [
    {name = "K. Rawson", email = "rawsonkara@gmail.com"}
]
keywords = ["curriculum-designer", "education", "AI", "web-crawling", "data-integration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# All runtime dependencies consolidated into a single section
dependencies = [
    # Core dependencies
    "PyQt6>=6.8.1",
    "requests>=2.32.3",        # web requests and API calls
    "ollama>=0.4.7",           # Ollama API client library
    "asyncio>=3.4.3",          # asynchronous operations
    "numpy>=2.2.4",            # vector operations
    "pandas>=2.2.3",           # data manipulation and analysis
    "tenacity>=9.1.2",         # retrying operations with exponential backoff
    "aiohttp>=3.11.16",        # asynchronous HTTP client for web scraping
    "tqdm>=4.67.1",            # progress bar for long-running tasks
    
    # Web and document
    "beautifulsoup4>=4.13.0",  # HTML parsing and extraction
    "markdown>=3.7.0",         # markdown processing
    "pymupdf>=1.25.5",         # PDF processing
    "python-docx>=1.1.2",       # DOCX processing
    
    # Machine learning 
    "scikit-learn>=1.6.1",     # vector operations and ML utilities
    "faiss-cpu>=1.10.0",        # vector search (auto-upgrades to GPU version if available)
    
    # RAG and LLMs
    "ollama>=0.4.7",           # Ollama API client library for LLMs
    "llama-index>=0.12.28",    # Agent framework for LLMs
    "llama-index-readers-json>=0.3.0", # JSON reader for LlamaIndex
    "llama-index-experimental>=0.5.4",  # Experimental features like PandasQueryEngine
    "langchain>=0.3.23",       # advanced text chunking and RAG pipelines
    "langchain-community>=0.3.21", # community-contributed modules for LangChain
    "langchain-ollama>=0.3.0", # LangChain integration with Ollama
    "tiktoken>=0.9.0",         # accurate token counting
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "mock>=5.2.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "flake8>=7.2.0",
    "mypy>=1.15.0"
]

[project.urls]
"Homepage" = "https://github.com/p3nGu1nZz/osyllabi"
"Bug Tracker" = "https://github.com/p3nGu1nZz/osyllabi/issues"
"Repository" = "https://github.com/p3nGu1nZz/osyllabi.git"

[project.scripts]
osyllabi = "osyllabi.main:main"

[tool.setuptools]
packages = ["osyllabi"]
include-package-data = true
zip-safe = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
source = ["osyllabi"]
omit = [
    "*/tests/*",
    "setup.py",
]